# word-counter-api

./: CHANGELOG.md  stack.yaml  word-counter.cabal
.stack-work/: stack.sqlite3
.stack-work/ghci/3eb3861f/: cabal_macros.h
src/: Main.hs
